Scrollbar fixes

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -123,6 +123,9 @@ input[type="search"]::-webkit-search-results-decoration {
     }
 
     @media (prefers-color-scheme: dark) {
+        :root {
+            color-scheme: dark;
+        }
         .link {
             color: theme("colors.gray.100");
         }
